--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Bienvenue</a></li>
-							<li><a href="#one">Who we are</a></li>
+							<li><a href="#one">Qui je suis ?</a></li>
 							<li><a href="#two">What we do</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
