--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Bienvenue</a></li>
-							<li><a href="#one">Qui je suis ?</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#one">Mes projets</a></li>
+							<li><a href="#two">Mes compétences</a></li>
+							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
