--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Nicolas HOULES</h1>
-								<p>Cliqué sur une des catégories si dessous pour accéder à divers informations</p>
+								<p>Cliquez sur une des catégories ci-dessous pour accéder aux informations</p>
 							</div>
 						</div>
 						<nav>
